--- a/chitterBackEnd/package.json
+++ b/chitterBackEnd/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "server",
+  "name": "dfxtra_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development nodemon server"
+    "test": "NODE_ENV=test mocha 'tests/**.js' --timeout 10000 --exit",
+    "start": "cross-env NODE_ENV=development nodemon server",
+    "start-prod": "NODE_ENV=production nodemon src/server",
+    "test-win": "SET NODE_ENV=test&&mocha 'tests/**.js' --timeout 10000 --exit",
+    "start-win": "SET NODE_ENV=development&&nodemon src/server",
+    "start-prod-win": "SET NODE_ENV=production&&nodemon src/server",
+    "c8-coverage": "NODE_ENV=test c8 npm test",
+    "c8-coverage-win": "c8 npm run test-win"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Angie Yang",
   "license": "ISC",
   "dependencies": {
-    "express-validator": "^7.0.1",
-    "mongodb": "^5.7.0"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^5.3.0",
+    "mongoose": "^7.4.2"
+  },
+  "devDependencies": {
+    "c8": "^8.0.1",
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0"
   }
 }
