--- a/chitterBackEnd/package.json
+++ b/chitterBackEnd/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "dfxtra_backend",
+  "name": "chitter_backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "NODE_ENV=test mocha 'tests/**.js' --timeout 10000 --exit",
-    "start": "cross-env NODE_ENV=development nodemon server",
-    "start-prod": "NODE_ENV=production nodemon src/server",
+    "start": "cross-env NODE_ENV=development nodemon server.js",
+    "start-prod": "NODE_ENV=production nodemon src/server.js",
     "test-win": "SET NODE_ENV=test&&mocha 'tests/**.js' --timeout 10000 --exit",
-    "start-win": "SET NODE_ENV=development&&nodemon src/server",
-    "start-prod-win": "SET NODE_ENV=production&&nodemon src/server",
+    "start-win": "SET NODE_ENV=development&&nodemon src/server.js",
+    "start-prod-win": "SET NODE_ENV=production&&nodemon src/server.js",
     "c8-coverage": "NODE_ENV=test c8 npm test",
     "c8-coverage-win": "c8 npm run test-win"
   },
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^5.3.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.4.2"
   },
   "devDependencies": {
